src/test/ui/hrtb/hrtb-just-for-static.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/hrtb-just-for-static.rs:24:5
   |
LL | / trait Foo<X> {
LL | |     fn foo(&self, x: X) { }
LL | | }
   | |_- trait `Foo` defined here
...
LL |       want_hrtb::<StaticInt>()
   |       ^^^^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `StaticInt` must implement `Foo<&'0 isize>`, for any lifetime `'0`...
   = note: ...but `StaticInt` actually implements `Foo<&'1 isize>`, for some specific lifetime `'1`

error[E0277]: the trait bound `for<'a> &'a u32: Foo<&'a isize>` is not satisfied
  --> $DIR/hrtb-just-for-static.rs:30:17
   |
LL | fn want_hrtb<T>()
   |    --------- required by a bound in this
LL |     where T : for<'a> Foo<&'a isize>
   |               ---------------------- required by this bound in `want_hrtb`
...
LL |     want_hrtb::<&'a u32>()
   |                 ^^^^^^^ the trait `for<'a> Foo<&'a isize>` is not implemented for `&'a u32`
   |
   = help: the following implementations were found:
             <&'a u32 as Foo<&'a isize>>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
